--- a/views/shop/search.ejs
+++ b/views/shop/search.ejs
@@ -107,23 +107,23 @@
               <div class="row g-4 left-section">
                 <div class="col-lg-12">
                   <div class="mb-3">
-                    <h4>Genres</h4>
+                    <h4>Categories</h4>
                     <ul class="list-unstyled fruite-categorie">
                       <li>
                         <div class="d-flex justify-content-between fruite-name">
-                          <a href="#"><i class="bi bi-book-fill me-2"></i>Men</a>
+                          <a href="#"></i>Men</a>
                           <span>(3)</span>
                         </div>
                       </li>
                       <li>
                         <div class="d-flex justify-content-between fruite-name">
-                          <a href="#"><i class="bi bi-book-fill me-2"></i>Women</a>
+                          <a href="#"></i>Women</a>
                           <span>(5)</span>
                         </div>
                       </li>
                       <li>
                         <div class="d-flex justify-content-between fruite-name">
-                          <a href="#"><i class="bi bi-book-fill me-2"></i>Kids</a>
+                          <a href="#"></i>Kids</a>
                           <span>(2)</span>
                         </div>
                       </li>
@@ -150,13 +150,13 @@
                 <div class="col-md-6 col-lg-6 col-xl-4">
                   <div class="rounded position-relative fruite-item">
                     <div class="fruite-img">
-                      <img src="styles/images/products/<%= searches.folderName %>/<%= searches.imageUrl.images[0] %>" class="img-fluid w-100 rounded-top" alt="">
+                      <img src="<%= searches.imageUrl.images[0] %>" class="img-fluid w-100 rounded-top" alt="">
                     </div>
                     <!--<div class="text-white bg-secondary px-3 py-1 rounded position-absolute" style="top: 10px; left: 10px;">Fruits</div>-->
                     <div class="p-4 border border-secondary border-top-0 rounded-bottom">
                       <h4><%= searches.title %></h4>
                       <p><%= searches.description %></p>
-                      <div class="d-flex justify-content-between flex-lg-wrap">
+                      <div class="d-flex justify-content-center align-items-center flex-lg-wrap">
                         <!--<% if (!isAuthenticated) { %>
                         <p class="text-dark fs-5 fw-bold mb-0" style="margin:auto">$<%= searches.price %> / kg</p>
                         <% }else{ %>
@@ -169,6 +169,9 @@
                           <input type="hidden" name="productId" value="<%= searches._id %>">
                         </form>     
                         <% } %>
+                        <br>
+                        <a href="/products/<%= search._id %>" class="btn btn-primary rounded-pill px-4">Details</a>
+
                       </div>
                     </div>
                   </div>
