--- a/views/shop/shop.ejs
+++ b/views/shop/shop.ejs
@@ -1,4 +1,7 @@
 <%- include('../includes/head.ejs') %>
+<link href="https://fonts.googleapis.com/css?family=Poppins:400,600,700" rel="stylesheet" />
+<link href="search/css/main.css" rel="stylesheet" />
+
 <style>
   .fruite-img {
     height: 400px;
@@ -87,19 +90,74 @@
       <div class="col-lg-12">
         <div class="row g-4">
 
-          <div class="col-xl-3">
+
+          <!-- search start -->
+          <div class="s013">
+            <form action="/new-search" method="POST">
+              <fieldset>
+                <legend>QUICK FIND YOUR CITY</legend>
+              </fieldset>
+              <div class="inner-form">
+                <div class="left">
+                  <div class="input-wrap first">
+                    <div class="input-field first">
+                      <label>WHAT</label>
+                      <input type="text" placeholder="ex: food, service, bar, hotel" name="searchInput" />
+                    </div>
+                  </div>
+                  <div class="input-wrap second">
+                    <div class="input-field second">
+                      <label>CATEGORY</label>
+                      <div class="input-select">
+                        <select data-trigger="" name="category">
+                          <option placeholder="" value=""></option>
+                          <option value="men">men</option>
+                          <option value="women">women</option>
+                          <option value="kids">kids</option>
+                        </select>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="input-wrap second">
+                    <div class="input-field second">
+                      <label>COLOR</label>
+                      <div class="input-select">
+                        <select data-trigger="" name="color">
+                          <option placeholder="" value=""></option>
+                          <option value="red">red</option>
+                          <option value="white">white</option>
+                          <option value="black">black</option>
+                          <option value="pink">pink</option>
+                          <option value="grey">grey</option>
+                          <option value="baby blue">baby blue</option>
+                          <option value="mauve">mauve</option>
+                        </select>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <button class="btn-search" type="submit">SEARCH</button>
+              </div>
+            </form>
+          </div>
+          
+          <!-- search end -->
+
+
+
+
+          <!-- <div class="col-xl-3">
             <div class="input-group w-100 mx-auto d-flex">
               <form action="/search" method="POST" class="d-flex">
                 <input type="search" class="form-control p-3" placeholder="keywords" aria-describedby="search-icon-1" name="search">
                 <button type="submit" style="border: none;background-color: transparent;"><span id="search-icon-1" class="input-group-text p-3"><i class="fa fa-search"></i></span></button>
               </form>
-              <!-- <span id="search-icon-1" class="input-group-text p-3"><i class="fa fa-search"></i></span> -->
             </div>
-          </div>
+          </div> -->
           <div class="col-6"></div>
-          <div class="col-xl-3">
+          <!-- <div class="col-xl-3">
             <div class="bg-light ps-3 py-3 rounded d-flex justify-content-between mb-4">
-              <form action="/filter?category=all" method="GET" class="w-100 d-flex" id="categoryForm">
+              <form action="/search?category=all" method="GET" class="w-100 d-flex" id="categoryForm">
                 <label for="categories"></label>
                 <select id="categories" name="category" class="border-0 form-select-sm bg-light me-3" form="categoryForm">
                   <option value="all">All</option>
@@ -110,89 +168,13 @@
                 <input type="submit" value="Filter" class="btn btn-primary">
               </form>
             </div>
-          </div>
+          </div> -->
         </div>
         <div class="row g-4">
           <div class="col-lg-3">
             <div class="row g-4 left-section">
               <div class="col-lg-12">
-                <div class="mb-3">
-                  <h4>CATEGORIES</h4>
-                  <ul style="list-style-type: none;cursor: pointer;">
-                    <li>
-                      <div class="d-flex justify-content-between fruite-name">
-                        <a href="/search?category=men">MEN</a>
-                        <span style="color:#9ecc48">( <%= categoryCounts['men'] || 0 %> )</span>
-                      </div>
-                    </li>
-                    <li>
-                      <div class="d-flex justify-content-between fruite-name">
-                        <a href="/search?category=women">WOMEN</a>
-                        <span style="color:#9ecc48">( <%= categoryCounts['women'] || 0 %> )</span>
-                      </div>
-                    </li>
-                    <li>
-                      <div class="d-flex justify-content-between fruite-name">
-                        <a href="/search?category=kids">KIDS</a>
-                        <span style="color:#9ecc48">( <%= categoryCounts['kids'] || 0 %> )</span>
-                      </div>
-                    </li>
-                    
-                  </ul>
-
-                </div>
-
-
-                <div class="mb-3">
-                  <h4>COLORS</h4>
-                  <ul style="list-style-type: none;cursor: pointer;">
-                    
-                    <li>
-                      <div class="d-flex justify-content-between fruite-name">
-                        <a href="/search?color=white"> WHITE</a>
-                        <span style="color:#9ecc48">( <%= colorCounts['white'] || 0 %> )</span>
-                      </div>
-                    </li>
-                    <li>
-                      <div class="d-flex justify-content-between fruite-name">
-                        <a href="/search?color=black">BLACK</a>
-                        <span style="color:#9ecc48">( <%= colorCounts['black'] || 0 %> )</span>
-                      </div>
-                    </li>
-                    <li>
-                      <div class="d-flex justify-content-between fruite-name">
-                        <a href="/search?color=pink">PINK</a>
-                        <span style="color:#9ecc48">( <%= colorCounts['pink'] || 0 %> )</span>
-                      </div>
-                    </li>
-                    <li>
-                      <div class="d-flex justify-content-between fruite-name">
-                        <a href="/search?color=grey">GREY</a>
-                        <span style="color:#9ecc48">( <%= colorCounts['grey'] || 0 %> )</span>
-                      </div>
-                    </li>
-                    <li>
-                      <div class="d-flex justify-content-between fruite-name">
-                        <a href="/search?color=red">RED</a>
-                        <span style="color:#9ecc48">( <%= colorCounts['red'] || 0 %> )</span>
-                      </div>
-                    </li>
-                    <li>
-                      <div class="d-flex justify-content-between fruite-name">
-                        <a href="/search?color=blue">BLUE</a>
-                        <span style="color:#9ecc48">( <%= colorCounts['baby blue'] || 0 %> )</span>
-                      </div>
-                    </li>
-                    <li>
-                      <div class="d-flex justify-content-between fruite-name">
-                        <a href="/search?color=mauve">MAUVE</a>
-                        <span style="color:#9ecc48">( <%= colorCounts['mauve'] || 0 %> )</span>
-                      </div>
-                    </li>
-                    
-                  </ul>
-
-                </div>
+                
               </div>
               <!--<div class="col-lg-12">
                 <div class="mb-3">
@@ -205,13 +187,14 @@
             </div>
           </div>
 
-          <div class="col-lg-9">
+
+          <div class="col-lg-12">
 
 
           <!-- beginning of all products section -->
           
           
-            <div class="row g-4 justify-content-center" id="products-section">
+            <div class="row g-6 justify-content-center" id="products-section">
               <% if (prods.length > 0) { %>
               <% for (let product of prods) { %>
               <!-- Product Card -->
@@ -294,20 +277,33 @@
 </div>
 </div>
 
-  <!-- Fruits Shop End-->
-
-  <%- include('../includes/footer.ejs') %>
-
-
-  <!-- Back to Top -->
-  <a href="#" class="btn btn-primary border-3 border-primary rounded-circle back-to-top"><i class="fa fa-arrow-up"></i></a>
 
 
 
 
 
+<!-- Fruits Shop End-->
+
+<%- include('../includes/footer.ejs') %>
 
 
+<!-- Back to Top -->
+<a href="#" class="btn btn-primary border-3 border-primary rounded-circle back-to-top"><i class="fa fa-arrow-up"></i></a>
+
+
+
+
+
+
+<!-- search bar  -->
+<script>
+  const choices = new Choices('[data-trigger]',
+  {
+    searchEnabled: false,
+    itemSelectText: '',
+  });
+
+</script>
 
 
 <script>
@@ -318,20 +314,36 @@
   });
 </script>
 
-  <!-- JavaScript Libraries -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>   
-  <script src = "https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" ></script>
-  <script src="styles/lib/easing/easing.min.js"></script>
-  <script src="styles/lib/waypoints/waypoints.min.js"></script>
+<script>
+  $(document).ready(function(e){
+    $('.search-panel .dropdown-menu').find('a').click(function(e) {
+		e.preventDefault();
+		var param = $(this).attr("href").replace("#","");
+		var concept = $(this).text();
+		$('.search-panel span#search_concept').text(concept);
+		$('.input-group #search_param').val(param);
+	});
+});
+</script>
+
+<!-- JavaScript Libraries -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>   
+<script src = "https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" ></script>
+<script src="styles/lib/easing/easing.min.js"></script>
+<script src="styles/lib/waypoints/waypoints.min.js"></script>
   <script src="styles/lib/lightbox/js/lightbox.min.js"></script>
   <script src="styles/lib/owlcarousel/owl.carousel.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
-
+  
+  <!-- Template Javascript -->
+  <script src="styles/js/main.js"></script>
+  
   <!-- Template Javascript -->
   <script src="styles/js/main.js"></script>
 
-  <!-- Template Javascript -->
-  <script src="styles/js/main.js"></script>
+
+  <!-- search bar  -->
+  <!-- <script src="search/js/extention/choices.js"></script> -->
 </body>
 
 </html>
