--- a/views/shop/home.ejs
+++ b/views/shop/home.ejs
@@ -90,7 +90,7 @@
             </div>
             <div class="featurs-content text-center">
               <h5>Fast Shipping</h5>
-              <p class="mb-0"> Get your favorite crocs delivered swiftly , so you can start enjoying your new footwear as soon as possible.</p>
+              <p class="mb-0"> Get your favorite Clogs delivered swiftly , so you can start enjoying your new footwear as soon as possible.</p>
             </div>
           </div>
         </div>
@@ -101,7 +101,7 @@
             </div>
             <div class="featurs-content text-center">
               <h5>Quality Assurance</h5>
-              <p class="mb-0">At our crocs factory, we are committed to make exceptional quality in every crocs.We make only the highest quality</p>
+              <p class="mb-0">At our Clogs factory, we are committed to make exceptional quality in every Clog.We make only the highest quality</p>
             </div>
           </div>
         </div>
@@ -112,7 +112,7 @@
             </div>
             <div class="featurs-content text-center">
               <h5>Product Range</h5>
-              <p class="mb-0"> We offer a diverse range of comfortable and stylish crocs for men, women, and children. From classic clogs to trendy sandals,</p>
+              <p class="mb-0"> We offer a diverse range of comfortable and stylish Clogs for men, women, and children. From classic clogs to trendy sandals,</p>
             </div>
           </div>
         </div>
@@ -247,145 +247,6 @@
   <!-- Featurs End -->
 
 
-  <!-- Vesitable Shop Start-->
-  <!-- <div class="container-fluid vesitable py-5">
-            <div class="container py-5">
-                <h1 class="mb-0">Our Best Sales</h1>
-                <div class="owl-carousel vegetable-carousel justify-content-center">
-                    <% if (prods.length > 0) { %>
-                        <% for (let product of prods) { %>
-                    <div class="border border-primary rounded position-relative vesitable-item">
-                        <div class="vesitable-img">
-                            <img src="styles/imgs/22.jpg" class="img-fluid w-100 rounded-top" alt="">
-                        </div>
-                        <div class="text-white bg-primary px-3 py-1 rounded position-absolute" style="top: 10px; right: 10px;">New</div>
-                        <div class="p-4 rounded-bottom">
-                            <h4><%= product.title%></h4>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit sed do eiusmod te incididunt</p>
-                            <div class="d-flex justify-content-between flex-lg-wrap">
-                                <p class="text-dark fs-5 fw-bold mb-0">$4.99</p>
-                                <a href="cart.html" class="btn border border-secondary rounded-pill px-3 text-primary"><i class="fa fa-shopping-bag me-2 text-primary"></i> Add to bag</a>
-                            </div>
-                        </div>
-                    </div>
-                    <% } %>
-                    <% } else { %>
-                        <h1>No Products Found!</h1>
-                    <% } %>
-                    <% if (prods.length > 0) { %>
-                        <% for (let product of prods) { %>
-                    <div class="border border-primary rounded position-relative vesitable-item">
-                        <div class="vesitable-img">
-                            <img src="styles/imgs/23.jpg" class="img-fluid w-100 rounded-top" alt="">
-                        </div>
-                        <div class="text-white bg-primary px-3 py-1 rounded position-absolute" style="top: 10px; right: 10px;">New</div>
-                        <div class="p-4 rounded-bottom">
-                            <h4><%= product.title%></h4>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit sed do eiusmod te incididunt</p>
-                            <div class="d-flex justify-content-between flex-lg-wrap">
-                                <p class="text-dark fs-5 fw-bold mb-0">$4.99</p>
-                                <a href="cart.html" class="btn border border-secondary rounded-pill px-3 text-primary"><i class="fa fa-shopping-bag me-2 text-primary"></i> Add to bag</a>
-                            </div>
-                        </div>
-                    </div>
-                    <% } %>
-                    <% } else { %>
-                        <h1>No Products Found!</h1>
-                    <% } %>
-                    <% if (prods.length > 0) { %>
-                        <% for (let product of prods) { %>
-                    <div class="border border-primary rounded position-relative vesitable-item">
-                        <div class="vesitable-img">
-                            <img src="styles/imgs/24.jpg" class="img-fluid w-100 rounded-top bg-light" alt="">
-                        </div>
-                        <div class="text-white bg-primary px-3 py-1 rounded position-absolute" style="top: 10px; right: 10px;">New</div>
-                        <div class="p-4 rounded-bottom">
-                            <h4><%= product.title%></h4>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit sed do eiusmod te incididunt</p>
-                            <div class="d-flex justify-content-between flex-lg-wrap">
-                                <p class="text-dark fs-5 fw-bold mb-0">$7.99</p>
-                                <a href="cart.html" class="btn border border-secondary rounded-pill px-3 text-primary"><i class="fa fa-shopping-bag me-2 text-primary"></i> Add to bag</a>
-                            </div>
-                        </div>
-                    </div>
-                    <% } %>
-                    <% } else { %>
-                        <h1>No Products Found!</h1>
-                    <% } %>
-                    <div class="border border-primary rounded position-relative vesitable-item">
-                        <div class="vesitable-img">
-                            <img src="imgs/25.jpg" class="img-fluid w-100 rounded-top" alt="">
-                        </div>
-                        <div class="text-white bg-primary px-3 py-1 rounded position-absolute" style="top: 10px; right: 10px;">Borrow</div>
-                        <div class="p-4 rounded-bottom">
-                            <h4>Jackque Rousseau</h4>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit sed do eiusmod te incididunt</p>
-                            <div class="d-flex justify-content-between flex-lg-wrap">
-                                <p class="text-dark fs-5 fw-bold mb-0">$7.99</p>
-                                <a href="cart.html" class="btn border border-secondary rounded-pill px-3 text-primary"><i class="fa fa-shopping-bag me-2 text-primary"></i> Add to bag</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="border border-primary rounded position-relative vesitable-item">
-                        <div class="vesitable-img">
-                            <img src="imgs/26.jpg" class="img-fluid w-100 rounded-top" alt="">
-                        </div>
-                        <div class="text-white bg-primary px-3 py-1 rounded position-absolute" style="top: 10px; right: 10px;">Borrow</div>
-                        <div class="p-4 rounded-bottom">
-                            <h4>La Tregua</h4>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit sed do eiusmod te incididunt</p>
-                            <div class="d-flex justify-content-between flex-lg-wrap">
-                                <p class="text-dark fs-5 fw-bold mb-0">$7.99</p>
-                                <a href="cart.html" class="btn border border-secondary rounded-pill px-3 text-primary"><i class="fa fa-shopping-bag me-2 text-primary"></i> Add to bag</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="border border-primary rounded position-relative vesitable-item">
-                        <div class="vesitable-img">
-                            <img src="imgs/27.jpg" class="img-fluid w-100 rounded-top" alt="">
-                        </div>
-                        <div class="text-white bg-primary px-3 py-1 rounded position-absolute" style="top: 10px; right: 10px;">Borrow</div>
-                        <div class="p-4 rounded-bottom">
-                            <h4>Three Little Animals</h4>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit sed do eiusmod te incididunt</p>
-                            <div class="d-flex justify-content-between flex-lg-wrap">
-                                <p class="text-dark fs-5 fw-bold mb-0">$7.99 </p>
-                                <a href="cart.html" class="btn border border-secondary rounded-pill px-3 text-primary"><i class="fa fa-shopping-bag me-2 text-primary"></i> Add to bag</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="border border-primary rounded position-relative vesitable-item">
-                        <div class="vesitable-img">
-                            <img src="imgs/28.jpg" class="img-fluid w-100 rounded-top" alt="">
-                        </div>
-                        <div class="text-white bg-primary px-3 py-1 rounded position-absolute" style="top: 10px; right: 10px;">New</div>
-                        <div class="p-4 rounded-bottom">
-                            <h4>Leo Telstoy</h4>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit sed do eiusmod te incididunt</p>
-                            <div class="d-flex justify-content-between flex-lg-wrap">
-                                <p class="text-dark fs-5 fw-bold mb-0">$7.99 </p>
-                                <a href="cart.html" class="btn border border-secondary rounded-pill px-3 text-primary"><i class="fa fa-shopping-bag me-2 text-primary"></i> Add to bag</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="border border-primary rounded position-relative vesitable-item">
-                        <div class="vesitable-img">
-                            <img src="imgs/29.jpg" class="img-fluid w-100 rounded-top" alt="">
-                        </div>
-                        <div class="text-white bg-primary px-3 py-1 rounded position-absolute" style="top: 10px; right: 10px;">Borrow</div>
-                        <div class="p-4 rounded-bottom">
-                            <h4>War And Peace</h4>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit sed do eiusmod te incididunt</p>
-                            <div class="d-flex justify-content-between flex-lg-wrap">
-                                <p class="text-dark fs-5 fw-bold mb-0">$7.99 </p>
-                                <a href="cart.html" class="btn border border-secondary rounded-pill px-3 text-primary"><i class="fa fa-shopping-bag me-2 text-primary"></i> Add to bag</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div> -->
-  <!-- Vesitable Shop End -->
 
 
 
