--- a/views/shop/shop.ejs
+++ b/views/shop/shop.ejs
@@ -236,7 +236,7 @@
               <!-- No Products Found -->
               <h1>No Products Found!</h1>
               <% } %>
-              <div class="row">
+              <div class="row" style="margin-top: 30px;">
                 <div class="col">
                   <% if (hasPreviousPage) { %>
                   <a href="/products?page=<%= previousPage %>" class="btn btn-primary">Previous</a>
