--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -65,7 +65,7 @@
                             <tr>
                                 <th scope="row">
                                     <div class="d-flex align-items-center">
-                                        <img src="styles/images/products/<%= p.productId.folderName %>/<%= p.productId.imageUrl.images[0] %>" class="img-fluid me-5 rounded-circle" style="width: 80px; height: 80px;" alt="">
+                                        <img src="<%= p.productId.imageUrl.images[0]%>" class="img-fluid me-5 rounded-circle" style="width: 80px; height: 80px;" alt="">
                                     </div>
                                 </th>
                                 <td>
