fixing the mobile nav toggle in shop page

--- a/views/shop/shop.ejs
+++ b/views/shop/shop.ejs
@@ -337,9 +337,17 @@
   
   <!-- Template Javascript -->
   <script src="styles/js/main.js"></script>
+
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
+  <script src="temp/lib/easing/easing.min.js"></script>
+  <script src="temp/lib/owlcarousel/owl.carousel.min.js"></script>
+
   
-  <!-- Template Javascript -->
-  <script src="styles/js/main.js"></script>
+    <!-- Contact Javascript File -->
+    <script src="temp/mail/jqBootstrapValidation.min.js"></script>
+    <script src="temp/mail/contact.js"></script>
+    <script src="temp/js/main.js"></script>
 
 
   <!-- search bar  -->
