--- a/views/shop/shop.ejs
+++ b/views/shop/shop.ejs
@@ -102,7 +102,7 @@
                   <div class="input-wrap first">
                     <div class="input-field first">
                       <label>WHAT</label>
-                      <input type="text" placeholder="ex: food, service, bar, hotel" name="searchInput" />
+                      <input type="text" placeholder="ex: coco, red, clog, black" name="searchInput" />
                     </div>
                   </div>
                   <div class="input-wrap second">
@@ -314,7 +314,7 @@
   });
 </script>
 
-<script>
+<!-- <script>
   $(document).ready(function(e){
     $('.search-panel .dropdown-menu').find('a').click(function(e) {
 		e.preventDefault();
@@ -324,30 +324,21 @@
 		$('.input-group #search_param').val(param);
 	});
 });
-</script>
+</script> -->
 
 <!-- JavaScript Libraries -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>   
-<script src = "https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" ></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" ></script>
 <script src="styles/lib/easing/easing.min.js"></script>
 <script src="styles/lib/waypoints/waypoints.min.js"></script>
-  <script src="styles/lib/lightbox/js/lightbox.min.js"></script>
-  <script src="styles/lib/owlcarousel/owl.carousel.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
+<script src="styles/lib/lightbox/js/lightbox.min.js"></script>
+<script src="styles/lib/owlcarousel/owl.carousel.min.js"></script>
   
   <!-- Template Javascript -->
   <script src="styles/js/main.js"></script>
-
-  <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
-  <script src="temp/lib/easing/easing.min.js"></script>
-  <script src="temp/lib/owlcarousel/owl.carousel.min.js"></script>
-
   
-    <!-- Contact Javascript File -->
-    <script src="temp/mail/jqBootstrapValidation.min.js"></script>
-    <script src="temp/mail/contact.js"></script>
-    <script src="temp/js/main.js"></script>
+  <!-- Template Javascript -->
+  <script src="styles/js/main.js"></script>
 
 
   <!-- search bar  -->
