updating home images

--- a/views/shop/home.ejs
+++ b/views/shop/home.ejs
@@ -1,5 +1,15 @@
 <%- include('../includes/head.ejs') %>
   <link href="css/home.css" rel="stylesheet">
+  <style>
+    @media (max-width: 768px) {
+
+      .testimonial .owl-nav .owl-prev,
+      .testimonial .owl-nav .owl-next {
+        top: -48px !important;
+      }
+    }
+  </style>
+
 </head>
 
 <body>
@@ -205,10 +215,10 @@
         <div class="col-md-6 col-lg-4">
           <a href="/products">
             <div class="service-item bg-secondary rounded border border-secondary h-75">
-              <img src="styles/images/1/kids1.jpg" class="img-fluid rounded-top w-100" alt="">
+              <img src="https://firebasestorage.googleapis.com/v0/b/croslite.appspot.com/o/images%2Fkids1.jpg?alt=media&token=0c0371ca-e853-487b-a2a4-af318b5aecad" class="img-fluid rounded-top w-100" alt="">
               <div class="px-4 rounded-bottom">
                 <div class="service-content text-center p-4 rounded" style="background-color: #d1242a;">
-                  <h5 class="text-white">Spidermad Coco Crocs</h5>
+                  <h5 class="text-white">Spiderman Coco Crocs</h5>
                   <h3 class="mb-0">20% OFF</h3>
                 </div>
               </div>
@@ -218,7 +228,7 @@
         <div class="col-md-6 col-lg-4">
           <a href="/shop">
             <div class="service-item bg-dark rounded border border-dark h-75">
-              <img src="styles/images/1/kids2.jpg" class="img-fluid rounded-top w-100" alt="">
+              <img src="https://firebasestorage.googleapis.com/v0/b/croslite.appspot.com/o/images%2FKids2.jpg?alt=media&token=a93415b8-b733-4b74-9913-a282f140bd15" class="img-fluid rounded-top w-100" alt="">
               <div class="px-4 rounded-bottom">
                 <div class="service-content text-center p-4 rounded" style="background-color: #f58f20;">
                   <h5 class="text-white">Batman Coco Crocs</h5>
@@ -231,7 +241,7 @@
         <div class="col-md-6 col-lg-4">
           <a href="/shop">
             <div class="service-item bg-primary rounded border border-primary h-75">
-              <img src="styles/images/1/profile1.jpg" class="img-fluid rounded-top w-100" alt="">
+              <img src="https://firebasestorage.googleapis.com/v0/b/croslite.appspot.com/o/images%2Fprofile1.jpg?alt=media&token=ed7879ca-bcad-4de5-a713-5adcd82bbc47" class="img-fluid rounded-top w-100" alt="">
               <div class="px-4 rounded-bottom">
                 <div class="service-content text-center p-4 rounded" style="background-color: #809096;">
                   <h5 class="text-white">Basic Coco Crocs</h5>
@@ -410,15 +420,6 @@
   </div>
   <!-- Fact Start -->
 
-  <style>
-    @media (max-width: 768px) {
-
-      .testimonial .owl-nav .owl-prev,
-      .testimonial .owl-nav .owl-next {
-        top: -48px !important;
-      }
-    }
-  </style>
 
   <!-- Tastimonial Start -->
   <div class="container-fluid testimonial py-5">
