handling some errors , handling the reviews and changing some html

--- a/views/shop/home.ejs
+++ b/views/shop/home.ejs
@@ -99,8 +99,8 @@
               <i class="fas fa-car-side fa-3x text-white"></i>
             </div>
             <div class="featurs-content text-center">
-              <h5>Fast Shipping</h5>
-              <p class="mb-0"> Get your favorite Clogs delivered swiftly , so you can start enjoying your new footwear as soon as possible.</p>
+              <h5>Fast in executing orders</h5>
+              <p class="mb-0"> Experience fast order fulfillment so you can enjoy your new clogs as quickly as possible, with minimal waiting time.</p>
             </div>
           </div>
         </div>
@@ -285,7 +285,7 @@
                                     <i class="fas fa-star"></i>
                                 </div>
                                 <h4 class="mb-3">3.12 $</h4>
-                                <a href="/products" class="btn border rounded-pill px-3" style="color:#81c408;border:color:#81c408"><i class="fa fa-shopping-bag me-2" style="color:#81c408"></i> Shop Now</a>
+                                <a href="/products" class="btn border rounded-pill px-3" style="color:#81c408;border:#81c408"><i class="fa fa-shopping-bag me-2" style="color:#81c408"></i> Shop Now</a>
                             </div>
                         </div>
                     </div>
@@ -302,7 +302,7 @@
                                     <i class="fas fa-star"></i>
                                 </div>
                                 <h4 class="mb-3">3.12 $</h4>
-                                <a href="/products" class="btn border rounded-pill px-3" style="color:#81c408;border:color:#81c408"><i class="fa fa-shopping-bag me-2" style="color:#81c408"></i> Shop Now</a>
+                                <a href="/products" class="btn border rounded-pill px-3" style="color:#81c408;border:#81c408"><i class="fa fa-shopping-bag me-2" style="color:#81c408"></i> Shop Now</a>
                             </div>
                         </div>
                     </div>
@@ -319,7 +319,7 @@
                                     <i class="fas fa-star"></i>
                                 </div>
                                 <h4 class="mb-3">3.12 $</h4>
-                                <a href="/products" class="btn border rounded-pill px-3" style="color:#81c408;border:color:#81c408"><i class="fa fa-shopping-bag me-2" style="color:#81c408"></i> Shop Now</a>
+                                <a href="/products" class="btn border rounded-pill px-3" style="color:#81c408;border:#81c408"><i class="fa fa-shopping-bag me-2" style="color:#81c408"></i> Shop Now</a>
                             </div>
                         </div>
                     </div>
@@ -336,7 +336,7 @@
                                     <i class="fas fa-star"></i>
                                 </div>
                                 <h4 class="mb-3">3.12 $</h4>
-                                <a href="/products" class="btn border rounded-pill px-3" style="color:#81c408;border:color:#81c408"><i class="fa fa-shopping-bag me-2" style="color:#81c408"></i> Shop Now</a>
+                                <a href="/products" class="btn border rounded-pill px-3" style="color:#81c408;border:#81c408"><i class="fa fa-shopping-bag me-2" style="color:#81c408"></i> Shop Now</a>
                             </div>
                         </div>
                     </div>
@@ -390,7 +390,7 @@
             <div class="counter bg-white rounded p-5">
               <i class="fa fa-users color"></i>
               <h4 style="color: gray;">satisfied clients</h4>
-              <h1 class="color">1963</h1>
+              <h1 class="color">150+</h1>
             </div>
           </div>
           <div class="col-md-6 col-lg-6 col-xl-3">
@@ -411,7 +411,7 @@
             <div class="counter bg-white rounded p-5">
               <i class="fa fa-users color"></i>
               <h4 style="color: gray;">Available Products</h4>
-              <h1 class="color">789</h1>
+              <h1 class="color">100+</h1>
             </div>
           </div>
         </div>
@@ -422,7 +422,7 @@
 
 
   <!-- Tastimonial Start -->
-  <div class="container-fluid testimonial py-5">
+  <!-- <div class="container-fluid testimonial py-5">
     <div class="container py-5">
       <div class="testimonial-header text-center">
         <h4 style="color: gray;">Our Testimonial</h4>
@@ -506,7 +506,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
   <!-- Tastimonial End -->
 
 
