--- a/views/shop/home.ejs
+++ b/views/shop/home.ejs
@@ -284,7 +284,7 @@
                                     <i class="fas fa-star" style="color:#81c408"></i>
                                     <i class="fas fa-star"></i>
                                 </div>
-                                <h4 class="mb-3">3.12 $</h4>
+                                <!-- <h4 class="mb-3">3.12 $</h4> -->
                                 <a href="/products" class="btn border rounded-pill px-3" style="color:#81c408;border:#81c408"><i class="fa fa-shopping-bag me-2" style="color:#81c408"></i> Shop Now</a>
                             </div>
                         </div>
@@ -301,7 +301,7 @@
                                     <i class="fas fa-star" style="color:#81c408"></i>
                                     <i class="fas fa-star"></i>
                                 </div>
-                                <h4 class="mb-3">3.12 $</h4>
+                                <!-- <h4 class="mb-3">3.12 $</h4> -->
                                 <a href="/products" class="btn border rounded-pill px-3" style="color:#81c408;border:#81c408"><i class="fa fa-shopping-bag me-2" style="color:#81c408"></i> Shop Now</a>
                             </div>
                         </div>
@@ -318,7 +318,7 @@
                                     <i class="fas fa-star" style="color:#81c408"></i>
                                     <i class="fas fa-star"></i>
                                 </div>
-                                <h4 class="mb-3">3.12 $</h4>
+                                <!-- <h4 class="mb-3">3.12 $</h4> -->
                                 <a href="/products" class="btn border rounded-pill px-3" style="color:#81c408;border:#81c408"><i class="fa fa-shopping-bag me-2" style="color:#81c408"></i> Shop Now</a>
                             </div>
                         </div>
@@ -335,7 +335,7 @@
                                     <i class="fas fa-star" style="color:#81c408"></i>
                                     <i class="fas fa-star"></i>
                                 </div>
-                                <h4 class="mb-3">3.12 $</h4>
+                                <!-- <h4 class="mb-3">3.12 $</h4> -->
                                 <a href="/products" class="btn border rounded-pill px-3" style="color:#81c408;border:#81c408"><i class="fa fa-shopping-bag me-2" style="color:#81c408"></i> Shop Now</a>
                             </div>
                         </div>
